--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mailgun-js": "^0.22.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mailgun-js": "^0.22.18",
     "@types/node": "^20.11.25",
     "@types/request": "^2.48.12",
     "nodemon": "^3.1.0",
