--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "start:dev": "nodemon index.ts"
+    "start:dev": "nodemon index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -17,12 +19,16 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/mailgun-js": "^0.22.18",
     "@types/node": "^20.11.25",
     "@types/request": "^2.48.12",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
